# a-transformer-impl

./: .gitignore  README.md  pyproject.toml
casual_transformer/: app.py  casual_transformer.py  decoder_layer.py  encoder_layer.py  multi_head_attention.py  position_wise_feed_forward_nn.py  positional_encoding.py
casual_transformer/data_utils/: utils.py
experiments/: dropout_avg.py
minigpt/: README.md  requirements.txt
minigpt/src/: dataset.py  london_baseline.py  run.py  trainer.py  utils.py
src/: app.py  casual_transformer.py  decoder_layer.py  encoder_layer.py  multi_head_attention.py  position_wise_feed_forward_nn.py  positional_encoding.py
src/lora/: lora_linear.py
tests/: test_causal_transformer.py  test_encoder_layer.py  test_multi_head_attention.py  test_position_wise_feed_forward_nn.py  test_positional_encoding.py
