[project]
name = "a-transformer-impl"
version = "0.1.0"
description = "A Transformer Pytorch Implementation"
authors = [
    { name = "Almog Tavor", email = "almogtavor@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "jaxtyping>=0.2.36",
    "numpy>=2.2.1",
    "pip>=24.3.1",
    "pydantic>=2.11.2",
    "setuptools>=75.6.0",
    "wheel>=0.45.1",
    "matplotlib>=3.10.0",
    "sympy>=1.13.1",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.5.1",
]
cu118 = [
  "torch>=2.5.1",
]
cu121 = [
  "torch>=2.5.1",
]
cu124 = [
  "torch>=2.5.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu118" },
    { extra = "cu121" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "pytest-cases>=3.8.6",
    "ruff>=0.8.4",
    "mypy>=1.14.1",
    "isort>=5.13.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
ignore_missing_imports = true